--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="D:/Downloads/MSPGunecrypted.exe"
+export_path="D:/Downloads/MSPG_beta.exe"
 encryption_include_filters="*.*"
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -89,8 +89,8 @@ architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
-version/code=21
-version/name="1.0.0.21"
+version/code=23
+version/name="1.0.0.23"
 package/unique_name="com.itsfets.MSPG"
 package/name="M.S.P.G."
 package/signed=true
