--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -71,7 +71,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="D:/Downloads/MSPG_gradle_beta_v1.0.0.24(7).apk"
+export_path="D:/Downloads/MSPG_gradle_beta_v1.0.0.31_rc3.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -90,7 +90,7 @@ architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
 version/code=31
-version/name="1.0.0.24(7)"
+version/name="1.0.0.31_rc3"
 package/unique_name="com.itsfets.MSPG"
 package/name="M.S.P.G."
 package/signed=true
